docs(choicefield): update docs in demo
Added note about using `ng-value` for `non-string` `ngModel`.

References #462.

--- a/src/components/choicefield/demo/index.html
+++ b/src/components/choicefield/demo/index.html
@@ -19,6 +19,9 @@
 
     <h1 class="ms-font-su">Choicefield Demo | &lt;uif-choicefield&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
+    <br />
+    <br />
+    <em>For non-string ngModel (boolean, array, ...), you should use <b>ng-value</b> instead of the <b>value</b> attribute of your uif-choicefield-option elements.</em>
 
     <h2>Basic usage</h2>
     <p>
