fix(callout): uifArrow optional
`uifArrow` attribute on the scope optional. If not specified, no decoration is applied.

--- a/src/components/callout/demo/index.html
+++ b/src/components/callout/demo/index.html
@@ -43,6 +43,29 @@
     </uif-callout>
   </p>
 
+  <p>uifArrow attribute is optional. If not provided, callout does not have arrow.
+    <br/>
+    <pre>
+    &lt;uif-callout&gt;
+      &lt;uif-callout-header&gt;All of your favorite people&lt;/uif-callout-header&gt;
+      &lt;uif-callout-content&gt;Message body is optional. If help documentation is available, consider adding a link to learn more at the bottom.&lt;/uif-callout-content&gt;
+      &lt;uif-callout-actions&gt;
+        &lt;a href=&quot;#&quot; class=&quot;ms-Callout-link ms-Link ms-Link--hero&quot;&gt;Learn more&lt;/a&gt;
+      &lt;/uif-callout-actions&gt;
+    &lt;/uif-callout&gt;
+    </pre>
+  </p>
+
+  <p>
+    <uif-callout>
+      <uif-callout-header>All of your favorite people</uif-callout-header>
+      <uif-callout-content>Message body is optional. If help documentation is available, consider adding a link to learn more at the bottom.</uif-callout-content>
+      <uif-callout-actions>
+        <a href="#" class="ms-Callout-link ms-Link ms-Link--hero">Learn more</a>
+      </uif-callout-actions>
+    </uif-callout>
+  </p>
+
   <!-- second example -->
   <p>
     This markup will render OOBE callout:
